#210 - Add Basic Auth to direct broker
- add username and password env vars
- add auth interceptors to both fhir (cql) and spring (flare) clients
- (unrelated...add volume to docker compose file)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       QUERYRESULT_EXPIRY_MINUTES: ${CODEX_FEASIBILITY_BACKEND_QUERYRESULT_EXPIRY_MINUTES:-5}
       MAX_SAVED_QUERIES_PER_USER: ${CODEX_FEASIBILITY_BACKEND_MAX_SAVED_QUERIES_PER_USER:-10}
       # ---- Direct
+      BROKER_CLIENT_DIRECT_AUTH_BASIC_USERNAME: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_AUTH_BASIC_USERNAME}
+      BROKER_CLIENT_DIRECT_AUTH_BASIC_PASSWORD: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_AUTH_BASIC_PASSWORD}
       BROKER_CLIENT_DIRECT_USE_CQL: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_USE_CQL:-false}
       BROKER_CLIENT_OBFUSCATE_RESULT_COUNT: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_OBFUSCATE_RESULT_COUNT:-false}
       # ---- Aktin
@@ -79,3 +81,11 @@ services:
       - POSTGRES_USER=codex-postgres
       - POSTGRES_PASSWORD=codex-password
       - POSTGRES_DB=codex_ui
+    volumes:
+      - type: volume
+        source: feas-backend-db-data
+        target: /var/lib/postgresql/data
+
+volumes:
+  feas-backend-db-data:
+    name: "feas-backend-db-data"
