--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,10 @@ app:
     mock:
       enabled: ${BROKER_CLIENT_MOCK_ENABLED:false}
     direct:
+      auth:
+        basic:
+          username: ${BROKER_CLIENT_DIRECT_AUTH_BASIC_USERNAME:}
+          password: ${BROKER_CLIENT_DIRECT_AUTH_BASIC_PASSWORD:}
       enabled: ${BROKER_CLIENT_DIRECT_ENABLED:false}
       useCql: ${BROKER_CLIENT_DIRECT_USE_CQL:false}
       obfuscateResultCount: ${BROKER_CLIENT_OBFUSCATE_RESULT_COUNT:false}
