--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.10.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
-    <ontology-tag>v2.1.13-RC</ontology-tag>
+    <ontology-tag>v2.1.24</ontology-tag>
   </properties>
 
   <dependencies>
@@ -198,7 +198,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.2.0-alpha.1</version>
+      <version>0.2.0-rc.4</version>
     </dependency>
 
     <dependency>
