--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.2.0-rc.4</version>
+      <version>0.2.0</version>
     </dependency>
 
     <dependency>
