--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,11 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>2.3.3</version>
     </dependency>
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+    </dependency>
 
   </dependencies>
 
