--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,6 +83,7 @@ app:
         baseUrl: ${DSF_WEBSERVICE_BASE_URL}
         readTimeout: 20000
         connectTimeout: 2000
+        logRequests: ${DSF_WEBSERVICE_LOG_REQUESTS:false}
       websocket:
         url: ${DSF_WEBSOCKET_URL}
       organizationId: ${DSF_ORGANIZATION_ID}
