--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,15 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
-      <version>1.17.6</version>
+      <version>1.19.7</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Remove when testcontainers uses a version > 1.24 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.26.1</version>
       <scope>test</scope>
     </dependency>
 
