--- a/.github/integration-test/docker-compose.yml
+++ b/.github/integration-test/docker-compose.yml
@@ -90,7 +90,7 @@ services:
       - "blaze-data:/app/data"
 
   flare:
-    image: ghcr.io/medizininformatik-initiative/flare:2.0.0-rc2
+    image: ghcr.io/medizininformatik-initiative/flare:2.1.1
     ports:
       - "8092:8080"
     environment:
