--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,20 @@
       <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
 
+<!--    Remove those when they are updated in the undertow dependency-->
+    <dependency>
+      <groupId>org.jboss.xnio</groupId>
+      <artifactId>xnio-api</artifactId>
+      <version>3.8.14.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jboss.xnio</groupId>
+      <artifactId>xnio-nio</artifactId>
+      <version>3.8.14.Final</version>
+      <scope>runtime</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
