--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,6 +105,7 @@ app:
   elastic:
     enabled: ${ELASTIC_SEARCH_ENABLED:true}
     host: ${ELASTIC_SEARCH_HOST:localhost:9200}
+    filter: ${ELASTIC_SEARCH_FILTER:context,terminology,kdsModule}
   privacy:
     threshold:
       sites: ${PRIVACY_THRESHOLD_SITES:3}
