#287 - Elastic search connection
- use multimatch query for our default query
- add criteria-profile-data endpoint
- move TerminologyEsService.java to another package
- add dtos for elastic search results since mapping is needed from context.code to context (WIP)
- still WIP

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,7 +105,7 @@ app:
   elastic:
     enabled: ${ELASTIC_SEARCH_ENABLED:true}
     host: ${ELASTIC_SEARCH_HOST:localhost:9200}
-    filter: ${ELASTIC_SEARCH_FILTER:context,terminology,kdsModule}
+    filter: ${ELASTIC_SEARCH_FILTER:context,terminology,kds_module}
   privacy:
     threshold:
       sites: ${PRIVACY_THRESHOLD_SITES:3}
