#294 - Update sq2cql to version v0.3.0
- update blaze in tests to 0.27, flare to 2.2.0
- update sq2cql dependency

--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.2.16</version>
+      <version>0.3.0-rc.1</version>
     </dependency>
 
     <dependency>
