#287 - Elastic search connection
- Rename TerminologyEsController to TerminologyEsRestController
- Add TerminologyEsRestControllerIT

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -19,7 +19,7 @@ app:
     aktin:
       enabled: false
   elastic:
-    enabled: false
+    enabled: true
   privacy:
     threshold:
       sites: 3
